chore: ignorar carpeta target